--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -19,6 +19,7 @@ body {
         width: 100%;
         background-image: url('../images/desktop/image-hero.jpg');
         background-repeat: no-repeat;
+        background-size: cover;
         nav {
             grid-column: 1 / span 7;
             grid-row: 1 / span 1;
@@ -27,7 +28,7 @@ body {
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
-            padding: 0 170px 0 128px;
+            padding: 0 170px;
             height: 150px;
             z-index: 10;
             #logo {}
@@ -89,13 +90,47 @@ body {
 
 
     #infos {
+        display: grid;
+        grid-template-columns: 0.8fr 2.1fr 0.5fr 1fr 1fr;
+        grid-template-rows: 0.5fr 0.6fr 1fr 0.5fr;
+        height: 800px;
+
         .image-infos {
+            grid-column: 2 / span 2;
+            grid-row: 2 / span 2;
+            overflow: hidden;
+            background-image: url('../images/desktop/image-interactive.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: left top;
+            height: 499px;
 
         }
         .text-infos {
+            background-color: white;
+            grid-column: 3 /span 3;
+            grid-row: 3 / span 1;
+            padding-left: 61px;
+            padding-top: 67px;
+            h2 {
+                font-family: $josefin;
+                font-size: 43px;
+                text-transform: uppercase;
+                font-weight: 100;
+            }
+            p {
+                font-family: $josefin;
+                font-size: 14px;
+                margin-bottom: 0;
+                width: 385px;
+                line-height: 1.5rem;
 
+
+            }
         }
     }
+
+
 
     #creations {
         .text-creations {
