--- a/docs/sass/media-queries/responsive.scss
+++ b/docs/sass/media-queries/responsive.scss
@@ -2,7 +2,6 @@
    body #header {
        nav  {
         padding: 0 34px 0 41px;
-
        }
        .text-header h1{
            width: 65%;
@@ -29,37 +28,100 @@
 } 
 }
 
-@media (min-width: 691px) and (max-width: 800px) {
+
+@media (min-width: 781px) and (max-width: 1150px) {
     body #infos {
-        .image-infos {
-            background-position: center;
-        }
-        .text-infos {
-            padding-left: 43px;
-            padding-top: 44px;
-            h2 {
-                font-size: 22px;
-
-            }
-            p {
-                font-size: 12px;
-                width: 261px;
-
-            }
+        grid-template-columns: 0.8fr 1.5fr 0.5fr 1fr 1fr;
+        grid-template-rows: 0.5fr 0.6fr 1.2fr 0.5fr;
+        .text-infos h2 {
+            font-size: 40px;
         }
     }
 }
 
-@media (min-width: 0px) and (max-width: 690px) {
+@media (min-width: 481px) and (max-width: 780px) {
     body #header {
         background-image: url("../images/mobile/image-hero.jpg");
         grid-template-columns: 1fr;
         background-size: cover;
-
         nav {
             padding: 0 28px;
             height: 106px;
+            #link {
+                display: none;
+            }
+            #link-mobile {
+                display: flex;
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+        }
+        .text-header {
+            h1 {
+                width: 73%;
+                left: 0;
+                right: 0;
+                margin: auto;
+                font-size: 39px;
+                bottom: 172px;
+                padding: 25px;
+            }
+        }
+        .background-image-transparent-header {
+            background-color: rgb(0 0 0 / 11%);
+        }
+    }
+    body #infos {
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.2fr 1fr 0.1fr 1fr 0.2fr;
+        height: auto;
+        .image-infos {
+            background-image: url('../images/mobile/image-interactive.jpg');
+            background-size: cover;
+            grid-column: 1 / span 5;
+            grid-row: 2 / span 1;
+            background-color: red;
+            overflow: hidden;
+            width: 90%;
+            margin: auto;
+            height: 480px;
+            background-position: top;
+            
+        }
+        .text-infos {
+            grid-column: 1 / span 5;
+            grid-row: 4 / span 2;
+            padding-top: 0;
+            padding-left: 0;
+            margin: 0 auto;
+        }
+        .text-infos h2 {
+            font-size: 50px;
+            margin-top: 0;
+            text-align: center;
+            width: 80%;
+            margin: auto;
+            margin-bottom: 47px;
+        }
+        .text-infos p {
+            width: 80%;
+            margin: auto;
+            text-align: center;
+            font-size: 29px;
+            line-height: 3rem;
+        }
+    }
+}
 
+@media (min-width: 0px) and (max-width: 480px) {
+    body #header {
+        background-image: url("../images/mobile/image-hero.jpg");
+        grid-template-columns: 1fr;
+        background-size: cover;
+        nav {
+            padding: 0 28px;
+            height: 106px;
             #link {
                 display: none;
             }
@@ -87,35 +149,36 @@
     }
 
     body #infos {
-        display: flex;
-        flex-direction: column;
-        padding: 22% 0;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.2fr 1fr 0.2fr 1.3fr 0.2fr;
         height: auto;
         .image-infos {
             background-image: url('../images/mobile/image-interactive.jpg');
             background-size: cover;
-            width: 80%;
-            height: 206px;
-            margin: 0 auto;
-            
+            grid-column: 1 / span 5;
+            grid-row: 2 / span 1;
+            background-color: red;
+            overflow: hidden;
+            width: 90%;
+            margin: auto;
+            height: 231px;
         }
         .text-infos {
+            grid-column: 1 / span 5;
+            grid-row: 4 / span 2;
+            padding-top: 0;
             padding-left: 0;
-            padding-top: 50px;
             h2, p {
                 text-align: center;
-                width: 80%;
-                margin: auto;
-                font-weight: 500;
             }
             h2 {
-                font-size: 36px;
+                font-size: 34px;
+                margin-top: 0;
             }
             p{
-                font-size: 17px;
-                line-height: 1.8rem;
-                margin-top: 27px;
-
+                width: 76%;
+                margin: auto;
+                font-size: 16px;
             }
         }
     }
