--- a/docs/sass/style.css
+++ b/docs/sass/style.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap");
 body {
   margin: 0;
+  max-width: 1440px;
+  margin: auto;
 }
 body p {
   font-size: 15px;
@@ -143,23 +145,16 @@ body #infos .text-infos p {
     width: 341px;
   }
 }
-@media (min-width: 691px) and (max-width: 800px) {
-  body #infos .image-infos {
-    background-position: center;
-  }
-  body #infos .text-infos {
-    padding-left: 43px;
-    padding-top: 44px;
+@media (min-width: 781px) and (max-width: 1150px) {
+  body #infos {
+    grid-template-columns: 0.8fr 1.5fr 0.5fr 1fr 1fr;
+    grid-template-rows: 0.5fr 0.6fr 1.2fr 0.5fr;
   }
   body #infos .text-infos h2 {
-    font-size: 22px;
-  }
-  body #infos .text-infos p {
-    font-size: 12px;
-    width: 261px;
+    font-size: 40px;
   }
 }
-@media (min-width: 0px) and (max-width: 690px) {
+@media (min-width: 481px) and (max-width: 780px) {
   body #header {
     background-image: url("../images/mobile/image-hero.jpg");
     grid-template-columns: 1fr;
@@ -192,35 +187,110 @@ body #infos .text-infos p {
   }
 
   body #infos {
-    display: flex;
-    flex-direction: column;
-    padding: 22% 0;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.2fr 1fr 0.1fr 1fr 0.2fr;
     height: auto;
   }
   body #infos .image-infos {
     background-image: url("../images/mobile/image-interactive.jpg");
     background-size: cover;
-    width: 80%;
-    height: 206px;
-    margin: 0 auto;
+    grid-column: 1/span 5;
+    grid-row: 2/span 1;
+    background-color: red;
+    overflow: hidden;
+    width: 90%;
+    margin: auto;
+    height: 480px;
+    background-position: top;
   }
   body #infos .text-infos {
+    grid-column: 1/span 5;
+    grid-row: 4/span 2;
+    padding-top: 0;
     padding-left: 0;
-    padding-top: 50px;
+    margin: 0 auto;
   }
-  body #infos .text-infos h2, body #infos .text-infos p {
+  body #infos .text-infos h2 {
+    font-size: 50px;
+    margin-top: 0;
     text-align: center;
     width: 80%;
     margin: auto;
-    font-weight: 500;
-  }
-  body #infos .text-infos h2 {
-    font-size: 36px;
+    margin-bottom: 47px;
   }
   body #infos .text-infos p {
-    font-size: 17px;
-    line-height: 1.8rem;
-    margin-top: 27px;
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    font-size: 29px;
+    line-height: 3rem;
+  }
+}
+@media (min-width: 0px) and (max-width: 480px) {
+  body #header {
+    background-image: url("../images/mobile/image-hero.jpg");
+    grid-template-columns: 1fr;
+    background-size: cover;
+  }
+  body #header nav {
+    padding: 0 28px;
+    height: 106px;
+  }
+  body #header nav #link {
+    display: none;
+  }
+  body #header nav #link-mobile {
+    display: flex;
+  }
+  body #header nav #link-mobile:hover {
+    cursor: pointer;
+  }
+  body #header .text-header h1 {
+    width: 73%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    font-size: 39px;
+    bottom: 172px;
+    padding: 25px;
+  }
+  body #header .background-image-transparent-header {
+    background-color: rgba(0, 0, 0, 0.11);
+  }
+
+  body #infos {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.2fr 1fr 0.2fr 1.3fr 0.2fr;
+    height: auto;
+  }
+  body #infos .image-infos {
+    background-image: url("../images/mobile/image-interactive.jpg");
+    background-size: cover;
+    grid-column: 1/span 5;
+    grid-row: 2/span 1;
+    background-color: red;
+    overflow: hidden;
+    width: 90%;
+    margin: auto;
+    height: 231px;
+  }
+  body #infos .text-infos {
+    grid-column: 1/span 5;
+    grid-row: 4/span 2;
+    padding-top: 0;
+    padding-left: 0;
+  }
+  body #infos .text-infos h2, body #infos .text-infos p {
+    text-align: center;
+  }
+  body #infos .text-infos h2 {
+    font-size: 34px;
+    margin-top: 0;
+  }
+  body #infos .text-infos p {
+    width: 76%;
+    margin: auto;
+    font-size: 16px;
   }
 }
 
