--- a/docs/sass/style.css
+++ b/docs/sass/style.css
@@ -119,6 +119,105 @@ body #infos .text-infos p {
   width: 385px;
   line-height: 1.5rem;
 }
+body #creations {
+  display: grid;
+  grid-template-columns: 0.8fr repeat(4, 1fr) 0.8fr;
+  grid-template-rows: 0.2fr 2fr 0.5fr;
+}
+body #creations h2 {
+  grid-column: 2/span 2;
+  grid-row: 1/span 1;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 43px;
+  text-transform: uppercase;
+  font-weight: 100;
+  display: flex;
+  align-items: center;
+}
+body #creations button {
+  grid-column: 5/span 1;
+  grid-row: 1/span 1;
+  margin: auto;
+  margin-right: 0px;
+  font-family: "Josefin Sans", sans-serif;
+  border: 2px black solid;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: black;
+  width: 200px;
+  height: 50px;
+  font-weight: 800;
+  background-color: white;
+  letter-spacing: 3px;
+  padding: 5px 0;
+}
+body #creations #root {
+  grid-column: 1/span 6;
+  grid-row: 2/span 1;
+}
+body #creations #root .container-images-creations {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+  width: 70%;
+  margin: auto;
+  margin-top: 5%;
+  margin-bottom: 10%;
+  overflow: hidden;
+}
+body #creations #root .container-images-creations .contain-img {
+  position: relative;
+  margin-bottom: 2%;
+  width: 23%;
+}
+body #creations #root .container-images-creations .contain-img .img {
+  width: 100%;
+}
+body #creations #root .container-images-creations .contain-img p {
+  position: absolute;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 32px;
+  color: white;
+  font-weight: 100;
+  bottom: 30px;
+  left: 29px;
+  margin: 0;
+  text-transform: uppercase;
+  width: 64%;
+}
+body #creations #root .container-images-creations .contain-img-mobile {
+  height: auto;
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 3%;
+  height: 118px;
+}
+body #creations #root .container-images-creations .contain-img-mobile img {
+  width: 100%;
+}
+body #creations #root .container-images-creations .contain-img-mobile .tranparent-img-mobile {
+  background: linear-gradient(to right, #000000a1, transparent);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
+body #creations #root .container-images-creations .contain-img-mobile p {
+  position: absolute;
+  font-family: "Josefin Sans", sans-serif;
+  color: white;
+  top: 20px;
+  left: 15px;
+  font-size: 20px;
+  text-transform: uppercase;
+  width: 35%;
+  font-weight: 100;
+}
+body #creations .container-images-creations-mobile {
+  display: none;
+}
 @media (min-width: 691px) and (max-width: 1150px) {
   body #header nav {
     padding: 0 34px 0 41px;
@@ -196,7 +295,6 @@ body #infos .text-infos p {
     background-size: cover;
     grid-column: 1/span 5;
     grid-row: 2/span 1;
-    background-color: red;
     overflow: hidden;
     width: 90%;
     margin: auto;
@@ -268,7 +366,6 @@ body #infos .text-infos p {
     background-size: cover;
     grid-column: 1/span 5;
     grid-row: 2/span 1;
-    background-color: red;
     overflow: hidden;
     width: 90%;
     margin: auto;
@@ -291,6 +388,28 @@ body #infos .text-infos p {
     width: 76%;
     margin: auto;
     font-size: 16px;
+  }
+}
+@media (min-width: 0px) and (max-width: 774px) {
+  body #creations {
+    grid-template-columns: 0.5fr 4fr 0.5fr;
+    grid-template-rows: 0.1fr 2fr 0.5fr;
+  }
+  body #creations h2 {
+    grid-column: 2/span 1;
+    font-size: 34px;
+    justify-content: center;
+    margin-top: 0;
+  }
+  body #creations button {
+    grid-column: 2/span 1;
+    grid-row: 3/span 1;
+    margin-right: auto;
+    margin-top: 20px;
+  }
+  body #creations #root .container-images-creations {
+    height: auto;
+    width: 85%;
   }
 }
 
