--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -133,13 +133,106 @@ body {
     }
 
 
-
     #creations {
-        .text-creations {
+        display: grid;
+        grid-template-columns: 0.8fr repeat(4, 1fr) 0.8fr;
+        grid-template-rows: 0.2fr 2fr 0.5fr;
+            h2 {
+                grid-column: 2/ span 2;
+                grid-row: 1/ span 1;
+                font-family: $josefin;
+                font-size: 43px;
+                text-transform: uppercase;
+                font-weight: 100; 
+                display: flex;
+                align-items: center;
+            }
+            button {
+                grid-column: 5 / span 1;
+                grid-row: 1/ span 1;
+                margin: auto;
+                margin-right: 0px;
+                font-family: $josefin;
+                border: 2px $black solid;
+                font-size: 20px;
+                text-transform: uppercase;
+                color: $black;
+                width: 200px;
+                height: 50px;
+                font-weight: 800;
+                background-color: $white;
+                letter-spacing: 3px;
+                padding: 5px 0;
+            }
+        #root {
+            grid-column: 1 / span 6;
+            grid-row: 2 / span 1;
+            .container-images-creations  {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                align-content: space-between;
+                width: 70%;
+                margin: auto;
+                margin-top: 5%;
+                margin-bottom: 10%;
+                overflow: hidden;
+
+            .contain-img {
+                position: relative;
+                margin-bottom: 2%;
+                width: 23%;
+                .img {
+                    width: 100%;
+                }
+                p {
+                    position: absolute;
+                    font-family: $josefin;
+                    font-size: 32px;
+                    color: $white;
+                    font-weight: 100;
+                    bottom: 30px;
+                    left: 29px;
+                    margin: 0;
+                    text-transform: uppercase;
+                    width: 64%;
+                }
+            }
+            .contain-img-mobile {
+                height: auto;
+                overflow: hidden;
+                position: relative;
+                margin-bottom: 3%;
+                height: 118px;
+                img {
+                    width: 100%;
+                }
+                .tranparent-img-mobile {
+                    background: linear-gradient(to right, #000000a1, transparent);
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                }
+                p {
+                    position: absolute;
+                    font-family: $josefin;
+                    color: $white;
+                    top: 20px;
+                    left: 15px;
+                    font-size: 20px;
+                    text-transform: uppercase;
+                    width: 35%;
+                    font-weight: 100;
+                }
+            }
+            }
 
         }
-        .container-images-creations {}
-        .container-images-creations-mobile {}
+        .container-images-creations-mobile {
+            display: none;
+        }
     }
 
     #footer {}
