--- a/docs/sass/media-queries/responsive.scss
+++ b/docs/sass/media-queries/responsive.scss
@@ -195,7 +195,7 @@
 @media (min-width: 0px) and (max-width: 774px) {
     body #creations {
         grid-template-columns: 0.5fr 4fr 0.5fr;
-        grid-template-rows: 0.1fr 2fr 0.5fr;
+        grid-template-rows: 0.1fr 2fr 0.3fr;
 
         h2 {
             grid-column: 2/span 1;
@@ -216,6 +216,36 @@
                 height: auto;
                 width: 85%;
             
+            }
+        }
+    }
+
+
+    body #footer {
+        flex-direction: column;
+        justify-content: center;
+        height: auto;
+        padding: 15% 0;
+        margin-top: 6%;
+        div:first-child {
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 11%;
+
+            #link-footer {
+                flex-direction: column;
+                align-items: center;
+                li {
+                    padding-right: 0;
+                    margin-bottom: 28%;
+                }
+            }
+
+        }
+        div:last-child {
+            align-items: center;
+            ul li {
+                padding-left: 0;
             }
         }
     }
