--- a/docs/sass/style.css
+++ b/docs/sass/style.css
@@ -41,11 +41,27 @@ body #header nav #link {
 body #header nav #link li {
   list-style: none;
   padding-left: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 body #header nav #link li a {
   text-decoration: none;
   color: white;
   font-family: "Alata", sans-serif;
+  margin-bottom: 10px;
+}
+body #header nav #link li .line-link {
+  height: 2px;
+  width: 0px;
+  background-color: transparent;
+  transition: all ease 0.5s;
+}
+body #header nav #link li:hover .line-link {
+  height: 2px;
+  width: 25px;
+  background-color: white;
 }
 body #header nav #link-mobile {
   display: none;
@@ -122,7 +138,7 @@ body #infos .text-infos p {
 body #creations {
   display: grid;
   grid-template-columns: 0.8fr repeat(4, 1fr) 0.8fr;
-  grid-template-rows: 0.2fr 2fr 0.5fr;
+  grid-template-rows: 0.2fr 2fr 0.2fr;
 }
 body #creations h2 {
   grid-column: 2/span 2;
@@ -150,6 +166,12 @@ body #creations button {
   background-color: white;
   letter-spacing: 3px;
   padding: 5px 0;
+  cursor: pointer;
+  transition: background-color ease 1s, color ease 1s;
+}
+body #creations button:hover {
+  background-color: black;
+  color: white;
 }
 body #creations #root {
   grid-column: 1/span 6;
@@ -161,10 +183,10 @@ body #creations #root .container-images-creations {
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: space-between;
-  width: 70%;
+  width: 71%;
   margin: auto;
   margin-top: 5%;
-  margin-bottom: 10%;
+  margin-bottom: 6%;
   overflow: hidden;
 }
 body #creations #root .container-images-creations .contain-img {
@@ -186,6 +208,23 @@ body #creations #root .container-images-creations .contain-img p {
   margin: 0;
   text-transform: uppercase;
   width: 64%;
+}
+body #creations #root .container-images-creations .contain-img div {
+  width: 100%;
+  height: 99.5%;
+  position: absolute;
+  top: 0;
+  background-color: #00000036;
+  transition: background-color ease 1s;
+}
+body #creations #root .container-images-creations .contain-img:hover {
+  cursor: pointer;
+}
+body #creations #root .container-images-creations .contain-img:hover div {
+  background-color: #ffffffa8;
+}
+body #creations #root .container-images-creations .contain-img:hover p {
+  color: black;
 }
 body #creations #root .container-images-creations .contain-img-mobile {
   height: auto;
@@ -215,9 +254,105 @@ body #creations #root .container-images-creations .contain-img-mobile p {
   width: 35%;
   font-weight: 100;
 }
+body #creations #root .container-images-creations .contain-img-mobile div {
+  width: 100%;
+  height: 97%;
+  position: absolute;
+  top: 0;
+  background-color: black;
+}
+body #creations #root .container-images-creations .contain-img-mobile div:hover {
+  background-color: white;
+}
 body #creations .container-images-creations-mobile {
   display: none;
 }
+body #footer {
+  background-color: black;
+  width: 100%;
+  height: 180px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+body #footer div:first-child {
+  display: flex;
+  flex-direction: column;
+}
+body #footer div:first-child #logo {
+  width: 162px;
+  margin-bottom: 20px;
+}
+body #footer div:first-child #logo img {
+  width: 100%;
+}
+body #footer div:first-child #link-footer {
+  color: white;
+  display: flex;
+}
+body #footer div:first-child #link-footer li {
+  list-style: none;
+  padding-right: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body #footer div:first-child #link-footer li a {
+  text-decoration: none;
+  color: white;
+  font-family: "Alata", sans-serif;
+  margin-bottom: 10px;
+}
+body #footer div:first-child #link-footer li .line-link {
+  height: 2px;
+  width: 0px;
+  background-color: transparent;
+  transition: all ease 0.5s;
+}
+body #footer div:first-child #link-footer li:hover .line-link {
+  height: 2px;
+  width: 25px;
+  background-color: white;
+}
+body #footer div:last-child {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+body #footer div:last-child ul {
+  display: flex;
+  margin-bottom: 10px;
+}
+body #footer div:last-child ul li {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body #footer div:last-child ul li i {
+  color: white;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+body #footer div:last-child ul li .line-link {
+  height: 2px;
+  width: 0px;
+  background-color: transparent;
+  transition: all ease 0.5s;
+}
+body #footer div:last-child ul li:hover .line-link {
+  height: 2px;
+  width: 25px;
+  background-color: white;
+  margin-left: 20px;
+}
+body #footer div:last-child p {
+  color: #8c8c8c;
+  font-family: "Alata", sans-serif;
+}
+
 @media (min-width: 691px) and (max-width: 1150px) {
   body #header nav {
     padding: 0 34px 0 41px;
@@ -393,7 +528,7 @@ body #creations .container-images-creations-mobile {
 @media (min-width: 0px) and (max-width: 774px) {
   body #creations {
     grid-template-columns: 0.5fr 4fr 0.5fr;
-    grid-template-rows: 0.1fr 2fr 0.5fr;
+    grid-template-rows: 0.1fr 2fr 0.3fr;
   }
   body #creations h2 {
     grid-column: 2/span 1;
@@ -410,6 +545,33 @@ body #creations .container-images-creations-mobile {
   body #creations #root .container-images-creations {
     height: auto;
     width: 85%;
+  }
+
+  body #footer {
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
+    padding: 15% 0;
+    margin-top: 6%;
+  }
+  body #footer div:first-child {
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 11%;
+  }
+  body #footer div:first-child #link-footer {
+    flex-direction: column;
+    align-items: center;
+  }
+  body #footer div:first-child #link-footer li {
+    padding-right: 0;
+    margin-bottom: 28%;
+  }
+  body #footer div:last-child {
+    align-items: center;
+  }
+  body #footer div:last-child ul li {
+    padding-left: 0;
   }
 }
 
