--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -293,7 +293,7 @@ body {
         div:first-child {
             display: flex;
             flex-direction: column;
-            #logo{
+            #logo-footer{
                 width: 162px;
                 margin-bottom: 30px;
                 img{
